--- a/Exercise_two_(2).ipynb
+++ b/Exercise_two_(2).ipynb
@@ -13,7 +13,7 @@
         "lgIAdclAGBTo",
         "CLEqAdMNlybb"
       ],
-      "authorship_tag": "ABX9TyNjgAktvDmTrTrYnqfyzxwJ",
+      "authorship_tag": "ABX9TyM3IN+jVFF9VLWgY3/BmES5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,7 +46,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 86,
+      "execution_count": 99,
       "metadata": {
         "id": "EN745YOl65g9"
       },
@@ -91,9 +91,9 @@
           "height": 300
         },
         "id": "s6qZw6Kz7hGK",
-        "outputId": "d271a727-0fa5-4939-817a-f1d74bcc740f"
+        "outputId": "4598b933-d517-48dc-f3a2-f3198a8e456f"
       },
-      "execution_count": 87,
+      "execution_count": 100,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -121,7 +121,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-e24d22dc-cde3-4500-a4e3-015edb6abb65\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-bed06fa8-c213-44be-9a50-fa4d9d59c960\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -263,7 +263,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e24d22dc-cde3-4500-a4e3-015edb6abb65')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-bed06fa8-c213-44be-9a50-fa4d9d59c960')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -315,12 +315,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-e24d22dc-cde3-4500-a4e3-015edb6abb65 button.colab-df-convert');\n",
+              "        document.querySelector('#df-bed06fa8-c213-44be-9a50-fa4d9d59c960 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-e24d22dc-cde3-4500-a4e3-015edb6abb65');\n",
+              "        const element = document.querySelector('#df-bed06fa8-c213-44be-9a50-fa4d9d59c960');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -340,8 +340,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-86938693-164f-440d-ba47-fea264f75f9b\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-86938693-164f-440d-ba47-fea264f75f9b')\"\n",
+              "    <div id=\"df-caa41bae-6a80-4b45-971c-1f467abcadaa\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-caa41bae-6a80-4b45-971c-1f467abcadaa')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -460,7 +460,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-86938693-164f-440d-ba47-fea264f75f9b button');\n",
+              "            document.querySelector('#df-caa41bae-6a80-4b45-971c-1f467abcadaa button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -476,7 +476,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 87
+          "execution_count": 100
         }
       ]
     },
@@ -517,9 +517,9 @@
           "height": 1000
         },
         "id": "aa3xqSil75Ug",
-        "outputId": "f9417003-acec-42e0-981a-564f7cea7609"
+        "outputId": "b704dd29-97fb-40c4-8b9a-be6427609992"
       },
-      "execution_count": 88,
+      "execution_count": 101,
       "outputs": [
         {
           "output_type": "display_data",
@@ -731,9 +731,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SJmv60qFJcWu",
-        "outputId": "cc8bedc8-59ff-46f5-e486-c5501287b7eb"
+        "outputId": "5adf6d76-d61c-4f73-9992-847b85b3fb9f"
       },
-      "execution_count": 89,
+      "execution_count": 102,
       "outputs": [
         {
           "output_type": "stream",
@@ -832,9 +832,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KmkRvKla-uIF",
-        "outputId": "5430bfba-198b-4ed2-dc37-2bef4eb778e7"
+        "outputId": "48ca1766-ec19-49c8-8bda-411f1d1798aa"
       },
-      "execution_count": 90,
+      "execution_count": 103,
       "outputs": [
         {
           "output_type": "stream",
@@ -901,9 +901,9 @@
           "height": 564
         },
         "id": "oyZoW8lG_mhe",
-        "outputId": "c563ce97-00cf-49c0-81e0-117675cfe376"
+        "outputId": "c5eefc00-359d-4958-89b6-b3367178f987"
       },
-      "execution_count": 91,
+      "execution_count": 104,
       "outputs": [
         {
           "output_type": "display_data",
@@ -957,9 +957,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "97cc714a-5d7d-4081-b411-af3911f08852"
+        "outputId": "2d18ffc6-bde8-45bd-e8a3-899b082b4b43"
       },
-      "execution_count": 92,
+      "execution_count": 105,
       "outputs": [
         {
           "output_type": "stream",
@@ -1025,9 +1025,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "M-vdHO7lo5xe",
-        "outputId": "76076ab3-2949-4b89-f212-311dbeaee37d"
+        "outputId": "4cac3d11-4029-4dd3-bef4-f2c5fc822462"
       },
-      "execution_count": 93,
+      "execution_count": 106,
       "outputs": [
         {
           "output_type": "stream",
@@ -1073,9 +1073,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Lervx1sqpZDL",
-        "outputId": "a5b08ed4-e774-4344-a5d9-63fc56395797"
+        "outputId": "9b706ddd-9708-4953-d711-4d34345da99a"
       },
-      "execution_count": 94,
+      "execution_count": 107,
       "outputs": [
         {
           "output_type": "stream",
@@ -1191,9 +1191,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jR6jvAYKrhJt",
-        "outputId": "53be0480-0d99-41a5-fcee-3c6367eb4e5d"
+        "outputId": "c70782be-1fe5-4e1c-b59a-c23ec482ef7f"
       },
-      "execution_count": 95,
+      "execution_count": 108,
       "outputs": [
         {
           "output_type": "stream",
@@ -1291,9 +1291,9 @@
           "height": 1000
         },
         "id": "71R0WXm2urPu",
-        "outputId": "d5a6a002-381a-428a-eb24-21aa69bee958"
+        "outputId": "4c937e0f-bf20-4f2a-8c7e-53b234cfabc3"
       },
-      "execution_count": 96,
+      "execution_count": 109,
       "outputs": [
         {
           "output_type": "stream",
@@ -1374,9 +1374,16 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Description of decision tree's rules (Question 8)\n",
-        "\n",
-        "Κανόνες:\n",
+        "# Description of decision tree's rules (Question 8)"
+      ],
+      "metadata": {
+        "id": "BsGRGEOGfhsB"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        ":Κανόνες:\n",
         "\n",
         "1. Sulfate ≤ 294.984 && pH ≤ 6.743 && Solids ≤ 34783.871 ⇒ Not Potable\n",
         "2. Sulfate ≤ 294.984 && pH ≤ 6.743 && Solids > 34783.871 ⇒ Potable\n",
@@ -1456,9 +1463,9 @@
           "height": 843
         },
         "id": "ed-SSFrR4efO",
-        "outputId": "601f1d7a-c711-44ee-f2af-a2ea154abe95"
+        "outputId": "07b7e69e-3e29-47cc-9363-0e332b5cdae4"
       },
-      "execution_count": 97,
+      "execution_count": 110,
       "outputs": [
         {
           "output_type": "stream",
@@ -1566,9 +1573,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ajYPmpO-91oU",
-        "outputId": "60edef8d-fc40-42e4-95b4-d0781bffbad3"
+        "outputId": "4ea991d1-ce69-4e1d-edbe-d6e1561a31d8"
       },
-      "execution_count": 98,
+      "execution_count": 111,
       "outputs": [
         {
           "output_type": "stream",
