--- a/Exercise_two_(2).ipynb
+++ b/Exercise_two_(2).ipynb
@@ -13,7 +13,7 @@
         "lgIAdclAGBTo",
         "CLEqAdMNlybb"
       ],
-      "authorship_tag": "ABX9TyM3IN+jVFF9VLWgY3/BmES5",
+      "authorship_tag": "ABX9TyO7ZVhKKF7vMRzml/t9rMe1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,7 +46,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 99,
+      "execution_count": 1,
       "metadata": {
         "id": "EN745YOl65g9"
       },
@@ -91,9 +91,9 @@
           "height": 300
         },
         "id": "s6qZw6Kz7hGK",
-        "outputId": "4598b933-d517-48dc-f3a2-f3198a8e456f"
+        "outputId": "47ac1349-5b8b-4d4b-bf7d-bf0d5e7ca9e7"
       },
-      "execution_count": 100,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -121,7 +121,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-bed06fa8-c213-44be-9a50-fa4d9d59c960\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-72cd95a4-0e63-4186-b258-df942dd9932b\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -263,7 +263,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-bed06fa8-c213-44be-9a50-fa4d9d59c960')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-72cd95a4-0e63-4186-b258-df942dd9932b')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -315,12 +315,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-bed06fa8-c213-44be-9a50-fa4d9d59c960 button.colab-df-convert');\n",
+              "        document.querySelector('#df-72cd95a4-0e63-4186-b258-df942dd9932b button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-bed06fa8-c213-44be-9a50-fa4d9d59c960');\n",
+              "        const element = document.querySelector('#df-72cd95a4-0e63-4186-b258-df942dd9932b');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -340,8 +340,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-caa41bae-6a80-4b45-971c-1f467abcadaa\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-caa41bae-6a80-4b45-971c-1f467abcadaa')\"\n",
+              "    <div id=\"df-4437e614-192c-4ce5-bbc9-c1c96073b076\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-4437e614-192c-4ce5-bbc9-c1c96073b076')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -460,7 +460,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-caa41bae-6a80-4b45-971c-1f467abcadaa button');\n",
+              "            document.querySelector('#df-4437e614-192c-4ce5-bbc9-c1c96073b076 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -476,7 +476,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 100
+          "execution_count": 2
         }
       ]
     },
@@ -517,9 +517,9 @@
           "height": 1000
         },
         "id": "aa3xqSil75Ug",
-        "outputId": "b704dd29-97fb-40c4-8b9a-be6427609992"
+        "outputId": "a41fba9e-265d-487d-cdc7-b6c6d9f28de0"
       },
-      "execution_count": 101,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "display_data",
@@ -731,9 +731,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SJmv60qFJcWu",
-        "outputId": "5adf6d76-d61c-4f73-9992-847b85b3fb9f"
+        "outputId": "4543c3f6-a94f-4699-a8a1-bd82874f9335"
       },
-      "execution_count": 102,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -832,9 +832,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KmkRvKla-uIF",
-        "outputId": "48ca1766-ec19-49c8-8bda-411f1d1798aa"
+        "outputId": "27f17745-0e5f-49fd-8365-f099fd1296ef"
       },
-      "execution_count": 103,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -901,9 +901,9 @@
           "height": 564
         },
         "id": "oyZoW8lG_mhe",
-        "outputId": "c5eefc00-359d-4958-89b6-b3367178f987"
+        "outputId": "967ae227-7e2b-4cc7-d721-861d9d1c2f8c"
       },
-      "execution_count": 104,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "display_data",
@@ -957,9 +957,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2d18ffc6-bde8-45bd-e8a3-899b082b4b43"
+        "outputId": "c98858d8-ee12-48d3-f732-89ed29170638"
       },
-      "execution_count": 105,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -1025,9 +1025,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "M-vdHO7lo5xe",
-        "outputId": "4cac3d11-4029-4dd3-bef4-f2c5fc822462"
+        "outputId": "90c092af-3679-447b-9c46-31ef8a3b2fc2"
       },
-      "execution_count": 106,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -1073,9 +1073,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Lervx1sqpZDL",
-        "outputId": "9b706ddd-9708-4953-d711-4d34345da99a"
+        "outputId": "39c65df2-8d98-49ed-f855-b9eb41464459"
       },
-      "execution_count": 107,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -1191,9 +1191,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jR6jvAYKrhJt",
-        "outputId": "c70782be-1fe5-4e1c-b59a-c23ec482ef7f"
+        "outputId": "6a2cfd9c-9e58-4f3f-9bb9-4533e7dbec89"
       },
-      "execution_count": 108,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -1291,9 +1291,9 @@
           "height": 1000
         },
         "id": "71R0WXm2urPu",
-        "outputId": "4c937e0f-bf20-4f2a-8c7e-53b234cfabc3"
+        "outputId": "0ae850c2-0bf1-4a61-96e3-ab5bfa288a8d"
       },
-      "execution_count": 109,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -1383,16 +1383,15 @@
     {
       "cell_type": "markdown",
       "source": [
-        ":Κανόνες:\n",
+        "Κανόνες:\n",
         "\n",
         "1. Sulfate ≤ 294.984 && pH ≤ 6.743 && Solids ≤ 34783.871 ⇒ Not Potable\n",
         "2. Sulfate ≤ 294.984 && pH ≤ 6.743 && Solids > 34783.871 ⇒ Potable\n",
-        "3. Sulfate ≤ 294.984 && pH > 6.743 && Solids ≤ 24670.431 ⇒ Potable\n",
-        "4. Sulfate ≤ 294.984 && pH > 6.743 && Solids > 24670.431 ⇒ Potable\n",
-        "5. Sulfate > 294.984 && pH ≤ 8.382 && Sulfate ≤ 354.23 ⇒ Not Potable\n",
-        "6. Sulfate > 294.984 && pH ≤ 8.382 && Sulfate > 354.23 ⇒ Potable\n",
-        "7. Sulfate > 294.984 && pH > 8.382 && Hardness ≤ 158.809 ⇒ Potable\n",
-        "8. Sulfate > 294.984 && pH > 8.382 && Hardness > 158.809 ⇒ Not Potable"
+        "3. Sulfate ≤ 294.984 && pH > 6.743 ⇒ Potable\n",
+        "4. Sulfate > 294.984 && pH ≤ 8.382 && Sulfate ≤ 354.23 ⇒ Not Potable\n",
+        "5. Sulfate > 294.984 && pH ≤ 8.382 && Sulfate > 354.23 ⇒ Potable\n",
+        "6. Sulfate > 294.984 && pH > 8.382 && Hardness ≤ 158.809 ⇒ Potable\n",
+        "7. Sulfate > 294.984 && pH > 8.382 && Hardness > 158.809 ⇒ Not Potable"
       ],
       "metadata": {
         "id": "rZdl8YCaeYd5"
@@ -1463,9 +1462,9 @@
           "height": 843
         },
         "id": "ed-SSFrR4efO",
-        "outputId": "07b7e69e-3e29-47cc-9363-0e332b5cdae4"
+        "outputId": "270df224-1433-46bb-a68f-81e26db6acd4"
       },
-      "execution_count": 110,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -1573,9 +1572,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ajYPmpO-91oU",
-        "outputId": "4ea991d1-ce69-4e1d-edbe-d6e1561a31d8"
+        "outputId": "56524b44-8deb-4160-f96d-3c3d69abdc48"
       },
-      "execution_count": 111,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
