--- a/Exercise_three_(3).ipynb
+++ b/Exercise_three_(3).ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO64h083bDVDqRSZN7VYyf4",
+      "authorship_tag": "ABX9TyNyNGGcO9SNbD2jk+Nl2ISn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1055,6 +1055,112 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Question 11 (c)"
+      ],
+      "metadata": {
+        "id": "uz9STKfuXTgp"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Linear Regression"
+      ],
+      "metadata": {
+        "id": "10UjkBbeXYQx"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Μαθαίνει μια γραμμική σχέση μεταξύ των χαρακτηριστικών εισόδου και της τιμής στόχου, ελαχιστοποιώντας το συνολικό τετραγωνικό σφάλμα."
+      ],
+      "metadata": {
+        "id": "LoyTVotcXbV7"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Random Forest Regressor"
+      ],
+      "metadata": {
+        "id": "GnTx8R5zXehO"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Συνδυάζει πολλά δέντρα απόφασης εκπαιδευμένα σε διαφορετικά υποσύνολα των δεδομένων και παίρνει τον μέσο όρο των προβλέψεών τους για μεγαλύτερη ακρίβεια και σταθερότητα."
+      ],
+      "metadata": {
+        "id": "xLth44sZXg06"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Bagging Regressor (με Linear Regression)"
+      ],
+      "metadata": {
+        "id": "Xe0XiL7SXjTB"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Δημιουργεί πολλά υποσύνολα του train set, εκπαιδεύει ένα Linear Regression σε κάθε υποσύνολο και συνδυάζει τις προβλέψεις με μέσο όρο για μείωση της διακύμανσης."
+      ],
+      "metadata": {
+        "id": "4BwKZCarXkK_"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### XGBoost Regressor"
+      ],
+      "metadata": {
+        "id": "GpYUmfamXlX9"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Εφαρμόζει boosting, δηλαδή εκπαιδεύει διαδοχικά δέντρα που προσπαθούν να διορθώσουν τα λάθη των προηγούμενων, αυξάνοντας την ακρίβεια σε μη γραμμικά δεδομένα."
+      ],
+      "metadata": {
+        "id": "KB2oBqAEXnaY"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Stacking Regressor (LR + Decision Tree)"
+      ],
+      "metadata": {
+        "id": "pLtyp7SiXonp"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Συνδυάζει προβλέψεις διαφορετικών μοντέλων (Linear Regression και Decision Tree) και χρησιμοποιεί ένα τελικό μοντέλο (meta-model) για να μάθει πώς να ζυγίζει καλύτερα τις προβλέψεις τους."
+      ],
+      "metadata": {
+        "id": "6hUfq_OrXq_F"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "RC2ysMXRYH_A"
+      }
     }
   ]
 }
