--- a/Exercise_four_(4).ipynb
+++ b/Exercise_four_(4).ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP6Mw4t6WL+E7hx63QA5ybz",
+      "authorship_tag": "ABX9TyPubSMWj10by2pikab/8XLx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 45,
       "metadata": {
         "id": "TQ969cqF3c3f"
       },
@@ -46,7 +46,10 @@
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns\n",
-        "import numpy as np"
+        "import numpy as np\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "from sklearn.metrics import accuracy_score, f1_score, precision_score, recall_score"
       ]
     },
     {
@@ -67,12 +70,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 449
+          "height": 412
         },
         "id": "3v_Xe2qq35Lu",
-        "outputId": "854e1fd7-a256-442b-bb04-08fdc40be783"
+        "outputId": "d4c91894-2940-442a-e8ca-a8a118c86c24"
       },
-      "execution_count": 23,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -119,7 +122,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-8efeb600-50b1-4bdd-80d5-ec38b56b9eec\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-5610fec6-ee7b-4f04-9c6f-0b5baf4e56c3\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -336,7 +339,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-8efeb600-50b1-4bdd-80d5-ec38b56b9eec')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-5610fec6-ee7b-4f04-9c6f-0b5baf4e56c3')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -388,12 +391,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-8efeb600-50b1-4bdd-80d5-ec38b56b9eec button.colab-df-convert');\n",
+              "        document.querySelector('#df-5610fec6-ee7b-4f04-9c6f-0b5baf4e56c3 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-8efeb600-50b1-4bdd-80d5-ec38b56b9eec');\n",
+              "        const element = document.querySelector('#df-5610fec6-ee7b-4f04-9c6f-0b5baf4e56c3');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -413,8 +416,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-ea92d46f-d4d5-400a-9d57-67cda6d2cf8d\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-ea92d46f-d4d5-400a-9d57-67cda6d2cf8d')\"\n",
+              "    <div id=\"df-15e643fc-ba3c-49ce-a5af-97723047d071\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-15e643fc-ba3c-49ce-a5af-97723047d071')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -533,7 +536,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-ea92d46f-d4d5-400a-9d57-67cda6d2cf8d button');\n",
+              "            document.querySelector('#df-15e643fc-ba3c-49ce-a5af-97723047d071 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -549,7 +552,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 23
+          "execution_count": 46
         }
       ]
     },
@@ -588,9 +591,9 @@
           "height": 1000
         },
         "id": "wlDd_khT6ARx",
-        "outputId": "37854c2d-3b73-4b80-a437-26d960b43b22"
+        "outputId": "0dd55c77-31bf-42dc-9efc-5c6beeb75b04"
       },
-      "execution_count": 24,
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "display_data",
@@ -749,9 +752,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1z0L8x7F85zv",
-        "outputId": "55856691-066b-4f95-a1ae-7e21ec91ca28"
+        "outputId": "685b68c1-89e3-480c-a3d9-d2ddf48be88b"
       },
-      "execution_count": 26,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -761,7 +764,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 26
+          "execution_count": 48
         }
       ]
     },
@@ -775,6 +778,42 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "# Set mask for known and unknown types\n",
+        "mask_known = y != 2 # white: 0, red: 1\n",
+        "mask_unknown = y == 2 # unkwown: 2\n",
+        "\n",
+        "# Create known variables\n",
+        "x_known = x[mask_known]\n",
+        "y_known = y[mask_known]\n",
+        "# Create unknown variables\n",
+        "x_unknown = x[mask_unknown]\n",
+        "\n",
+        "x_known.shape, y_known.shape, x_unknown.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FCKXZEmZEZIk",
+        "outputId": "c5f3c2e4-5656-4350-b68c-61c0e94e5f89"
+      },
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "((2599, 12), (2599,), (3898, 12))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 49
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "# Question 4"
@@ -784,12 +823,119 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "x_train, x_test, y_train, y_test = train_test_split(x_known, y_known, test_size=0.3, random_state=42, stratify=y_known)\n",
+        "\n",
+        "# Print results\n",
+        "print(\"X train:\", x_train.shape)\n",
+        "print(\"X test:\", x_test.shape)\n",
+        "print(\"Y train:\", y_train.shape)\n",
+        "print(\"Y test:\", y_test.shape)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fOUellkhGkLV",
+        "outputId": "244be5a4-25ce-45e1-9024-6ea6915bd05c"
+      },
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "X train: (1819, 12)\n",
+            "X test: (780, 12)\n",
+            "Y train: (1819,)\n",
+            "Y test: (780,)\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "# Question 5"
       ],
       "metadata": {
         "id": "ab-J7ijm9lC0"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "rf_classifier = RandomForestClassifier(random_state=42)\n",
+        "rf_classifier.fit(x_train, y_train)\n",
+        "\n",
+        "# Predictions\n",
+        "y_pred_train = rf_classifier.predict(x_train)\n",
+        "y_pred_test = rf_classifier.predict(x_test)\n",
+        "\n",
+        "# Create method for calculating desired scores\n",
+        "def calculate_scores(y_true, y_pred):\n",
+        "    return {\n",
+        "        \"accuracy\": accuracy_score(y_true, y_pred),\n",
+        "        \"precision\": precision_score(y_true, y_pred, zero_division=0),\n",
+        "        \"recall\": recall_score(y_true, y_pred, zero_division=0),\n",
+        "        \"f1\": f1_score(y_true, y_pred, zero_division=0)\n",
+        "    }\n",
+        "\n",
+        "# Calculate train desired scores\n",
+        "train_desired_scores = calculate_scores(y_train, y_pred_train)\n",
+        "\n",
+        "# Calculate test desired scores\n",
+        "test_desired_scores = calculate_scores(y_test, y_pred_test)\n",
+        "\n",
+        "# Print results (Train)\n",
+        "print(\"Train scores:\\n\")\n",
+        "for metric, value in train_desired_scores.items():\n",
+        "    print(f\"{metric.capitalize()} score: {value:.4f}\")\n",
+        "\n",
+        "# Print results (Test)\n",
+        "print(\"\\nTest scores:\\n\")\n",
+        "for metric, value in test_desired_scores.items():\n",
+        "    print(f\"{metric.capitalize()} score: {value:.4f}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YN_vUUc6MjI6",
+        "outputId": "640af2c1-671d-4ead-eea3-7acabc7901f8"
+      },
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Train scores:\n",
+            "\n",
+            "Accuracy score: 0.9995\n",
+            "Precision score: 0.9978\n",
+            "Recall score: 1.0000\n",
+            "F1 score: 0.9989\n",
+            "\n",
+            "Test scores:\n",
+            "\n",
+            "Accuracy score: 0.9987\n",
+            "Precision score: 0.9948\n",
+            "Recall score: 1.0000\n",
+            "F1 score: 0.9974\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Αν το dataset είναι ισορροπημένο, το accuracy είναι αντιπροσωπευτικό.\n",
+        "Αν όμως δεν υπάρχει ισορροπία στο dataset, το F1-score είναι πιο κατάλληλο διότι συνδυάζει precision και recall, αποτυπώνοντας καλύτερα την απόδοση του μοντέλου στις λιγότερο συχνές κλάσεις."
+      ],
+      "metadata": {
+        "id": "LC8esON3S3GC"
       }
     },
     {
@@ -802,6 +948,81 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "rf_classifier_balanced = RandomForestClassifier(random_state=42, class_weight=\"balanced\")\n",
+        "rf_classifier_balanced.fit(x_train, y_train)\n",
+        "\n",
+        "# Predictions\n",
+        "y_pred_train = rf_classifier_balanced.predict(x_train)\n",
+        "y_pred_test = rf_classifier_balanced.predict(x_test)\n",
+        "\n",
+        "# Calculate train desired scores\n",
+        "train_desired_scores = calculate_scores(y_train, y_pred_train)\n",
+        "\n",
+        "# Calculate test desired scores\n",
+        "test_desired_scores = calculate_scores(y_test, y_pred_test)\n",
+        "\n",
+        "# Print results (Train)\n",
+        "print(\"Train scores:\\n\")\n",
+        "for metric, value in train_desired_scores.items():\n",
+        "    print(f\"{metric.capitalize()} score: {value:.4f}\")\n",
+        "\n",
+        "# Print results (Test)\n",
+        "print(\"\\nTest scores:\\n\")\n",
+        "for metric, value in test_desired_scores.items():\n",
+        "    print(f\"{metric.capitalize()} score: {value:.4f}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Ij_dBerFTN63",
+        "outputId": "514aabc9-b769-4fdf-b319-8aa8a89825b5"
+      },
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Train scores:\n",
+            "\n",
+            "Accuracy score: 0.9995\n",
+            "Precision score: 0.9978\n",
+            "Recall score: 1.0000\n",
+            "F1 score: 0.9989\n",
+            "\n",
+            "Test scores:\n",
+            "\n",
+            "Accuracy score: 0.9949\n",
+            "Precision score: 0.9947\n",
+            "Recall score: 0.9844\n",
+            "F1 score: 0.9895\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Η παράμετρος class_weight καθορίζει το βάρος (σημαντικότητα) που δίνεται σε κάθε κλάση κατά την εκπαίδεσυη του μοντέλου.\n",
+        "\n",
+        "Δίνοντας τιμή 'balanced', το Random Forest υπολογίζει αυτόματα τα βάρη των κλάσεων με τέτοιο τρόπο ώστε να αντισταθμιστεί η ανισορροπία στο πλήθος των δειγμάτων της κάθε κλάσης.\n",
+        "\n",
+        "Κατά αυτό τον τρόπο, οι λιγότερο συχνές κλάσεις, παίρνουν μεγαλύτερο βάρος και το μοντέλο σταματάει να \"ευνοεί\" τις συχνότερες κλάσεις.\n",
+        "\n",
+        "**Source:** https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestClassifier.html\n",
+        "\n",
+        "**Specific text in source:**\n",
+        "\n",
+        "\"The “balanced” mode uses the values of y to automatically adjust weights inversely proportional to class frequencies in the input data as n_samples / (n_classes * np.bincount(y))\""
+      ],
+      "metadata": {
+        "id": "Ye5IB28pUOjV"
+      }
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "# Question 7"
@@ -809,6 +1030,40 @@
       "metadata": {
         "id": "OI6tEuPR9oXq"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Prediction\n",
+        "y_unknown_proba = rf_classifier_balanced.predict_proba(x_unknown)\n",
+        "y_unknown_proba"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hsLP98PfVbie",
+        "outputId": "1b7af66b-352a-4f29-c297-b21455dde4ad"
+      },
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[1.  , 0.  ],\n",
+              "       [1.  , 0.  ],\n",
+              "       [1.  , 0.  ],\n",
+              "       ...,\n",
+              "       [0.01, 0.99],\n",
+              "       [0.01, 0.99],\n",
+              "       [0.01, 0.99]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 53
+        }
+      ]
     },
     {
       "cell_type": "markdown",
